--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
         {% do pimcore_head_link().appendStylesheet(cmf_minifiedAssetUrl('/bundles/pimcorecustomermanagementframework/admin/css/cmf.css')) %}
     {% endapply %}
 
-    {% block head_stylesheets deferred %}
+    {% block head_stylesheets %}
         {{ pimcore_head_link() }}
     {% endblock %}
 </head>
@@ -25,16 +25,14 @@
 </div>
 
 {% do cmf_jsConfig().generateScriptTag(false) %}
-{% do pimcore_head_script().captureStart() %}
-{{ cmf_jsConfig()|raw }}
-{% do pimcore_head_script().captureEnd() %}
+{% do pimcore_head_script().appendScript(cmf_jsConfig()|raw ~ "") %}
 
 {% apply spaceless %}
     {% do pimcore_head_script().appendFile(cmf_minifiedAssetUrl('/bundles/pimcorecustomermanagementframework/admin/js/cmf.js')) %}
     {% do pimcore_head_script().prependFile(cmf_minifiedAssetUrl('/bundles/pimcorecustomermanagementframework/admin/js/lib.js')) %}
 {% endapply %}
 
-{% block headscripts deferred %}
+{% block headscripts %}
     {{ pimcore_head_script() }}
 {% endblock %}
 
